// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty state 1`] = `
.c12 {
  box-sizing: border-box;
}

.c13 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c3 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 240px;
}

.c3:active {
  opacity: 0.56;
}

.c3:hover,
.c3:focus {
  background: #651FFF;
}

.c3:active {
  background: #354AA4;
}

.c3:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c17 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 224px;
}

.c17:active {
  opacity: 0.56;
}

.c17:hover,
.c17:focus {
  background: #651FFF;
}

.c17:active {
  background: #354AA4;
}

.c17:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c10 {
  display: inline-block;
  transition: color .3s;
  margin-bottom: 16px;
  color: #FFFFFF;
  font-size: 64px;
}

.c5 {
  box-sizing: border-box;
  max-width: 900px;
  margin-top: 24px;
  margin-left: auto;
  margin-right: auto;
  padding: 24px;
  width: 100%;
  background-color: #1C254D;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c6 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  margin-right: 24px;
  padding: 24px;
  background-color: #111B48;
}

.c16 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
}

.c8 {
  display: block;
  outline: none;
  width: 220px;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  color: rgba(255,255,255,0.87);
  font-weight: 700;
}

.c14 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  font-size: 14px;
  margin: 0px;
  margin-bottom: 8px;
  font-weight: 700;
}

.c15 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c4 {
  box-sizing: border-box;
  max-width: 900px;
  margin-top: 24px;
  margin-left: auto;
  margin-right: auto;
  padding: 24px;
  width: 100%;
  background-color: #1C254D;
  display: flex;
}

.c7 {
  box-sizing: border-box;
  max-width: 296px;
  margin-right: 24px;
  padding: 24px;
  max-height: 176px;
  background-color: #111B48;
  border-radius: 8px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c9 {
  box-sizing: border-box;
  margin-top: 16px;
  display: flex;
  align-items: center;
  flex-direction: column;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  overflow: auto;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Kubernetes
      </div>
      <a
        class="c3"
        href="https://goteleport.com/docs/kubernetes-access/guides"
        kind="primary"
        rel="noreferrer"
        target="_blank"
        width="240px"
      >
        View documentation
      </a>
    </div>
    <div
      class="c4 sc-AxirZ c5"
      width="100%"
    >
      <a
        class="c6 c7"
        href="https://www.youtube.com/watch?v=2diX_UAmJ1c"
        rel="noreferrer"
        style="position: relative;"
        target="_blank"
      >
        <img
          class="c8"
          src="file_stub"
          width="220px"
        />
        <div
          class="c9"
          style="position: absolute;"
        >
          <span
            class="c10 icon icon-play-circle "
            color="light"
            font-size="64px"
          />
          <div
            class="c11"
            color="text.primary"
            font-weight="700"
          >
            WATCH THE QUICKSTART
          </div>
        </div>
      </a>
      <div
        class="c12"
      >
        <div
          class="c13"
        >
          <div
            class="c14"
            font-size="14"
            font-weight="700"
          >
            ADD YOUR FIRST KUBERNETES CLUSTER
          </div>
          <div
            class="c15"
          >
            Fast, secure access to Kubernetes clusters. Follow
             
            <a
              class="c16"
              href="https://goteleport.com/docs/kubernetes-access/guides"
              rel="noreferrer"
              target="_blank"
            >
              the documentation
            </a>
             
            to connect your first cluster.
          </div>
        </div>
        <button
          class="c17"
          kind="primary"
          width="224px"
        >
          VIEW DOCUMENTATION
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`failed 1`] = `
.c4 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-all;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
}

.c4 a {
  color: #FFFFFF;
}

.c3 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 240px;
}

.c3:active {
  opacity: 0.56;
}

.c3:hover,
.c3:focus {
  background: #651FFF;
}

.c3:active {
  background: #354AA4;
}

.c3:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  overflow: auto;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div
  class="sc-AxirZ sc-fzqBZW c0"
>
  <div
    class="sc-AxirZ sc-fzqBZW c1"
  >
    <div
      class="sc-fznZeY c2"
    >
      Kubernetes
    </div>
    <a
      class="c3"
      href="https://goteleport.com/docs/kubernetes-access/guides"
      kind="primary"
      rel="noreferrer"
      target="_blank"
      width="240px"
    >
      View documentation
    </a>
  </div>
  <div
    class="c4"
    kind="danger"
  >
    server error
  </div>
</div>
`;

exports[`loaded 1`] = `
.c5 {
  box-sizing: border-box;
}

.c3 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 240px;
}

.c3:active {
  opacity: 0.56;
}

.c3:hover,
.c3:focus {
  background: #651FFF;
}

.c3:active {
  background: #354AA4;
}

.c3:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c6 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #2C3A73;
  border: 1px solid #1C254D;
  opacity: .87;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-bottom: 8px;
  margin-right: 16px;
  margin-top: 0px;
  padding-left: 8px;
  padding-right: 16px;
}

.c6:active {
  opacity: 0.56;
}

.c6:hover,
.c6:focus {
  background: #2C3A73;
  border: 1px solid rgba(255,255,255,0.1);
  opacity: 1;
}

.c6:active {
  opacity: 0.24;
}

.c6:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c21 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #2C3A73;
  border: 1px solid #1C254D;
  opacity: .87;
  color: rgba(255,255,255,0.87);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
}

.c21:active {
  opacity: 0.56;
}

.c21:hover,
.c21:focus {
  background: #2C3A73;
  border: 1px solid rgba(255,255,255,0.1);
  opacity: 1;
}

.c21:active {
  opacity: 0.24;
}

.c21:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c9 {
  display: inline-block;
  transition: color .3s;
  margin-right: 4px;
  color: rgba(255,255,255,0.24);
  font-size: 18px;
}

.c16 {
  display: inline-block;
  transition: color .3s;
  color: #FFFFFF;
  font-size: 16px;
}

.c19 {
  display: inline-block;
  transition: color .3s;
  color: #FFFFFF;
}

.c20 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  background-color: #111B48;
  color: rgba(255,255,255,0.87);
  margin-bottom: 4px;
  margin-right: 4px;
}

.c14 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  color: #FFFFFF;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  display: flex;
  flex-wrap: wrap;
}

.c12 {
  box-sizing: border-box;
  display: flex;
}

.c13 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
  align-items: center;
}

.c17 {
  background: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-collapse: collapse;
  border-spacing: 0;
  border-radius: 8px;
  font-size: 12px;
  width: 100%;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.c17 > thead > tr > th,
.c17 > tbody > tr > th,
.c17 > tfoot > tr > th,
.c17 > thead > tr > td,
.c17 > tbody > tr > td,
.c17 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c17 > thead > tr > th:first-child,
.c17 > tbody > tr > th:first-child,
.c17 > tfoot > tr > th:first-child,
.c17 > thead > tr > td:first-child,
.c17 > tbody > tr > td:first-child,
.c17 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c17 > thead > tr > th:last-child,
.c17 > tbody > tr > th:last-child,
.c17 > tfoot > tr > th:last-child,
.c17 > thead > tr > td:last-child,
.c17 > tbody > tr > td:last-child,
.c17 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c17 > thead > tr > th {
  background: #111B48;
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c17 > thead > tr > th .c8 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c17 > tbody > tr > td {
  color: rgba(255,255,255,0.87);
  line-height: 16px;
}

.c17 tbody tr {
  border-bottom: 1px solid #1C254D;
}

.c17 tbody tr:hover {
  background-color: rgb(37,49,98);
}

.c17 tbody > tr:last-child td:first-child {
  border-bottom-left-radius: 8px;
}

.c17 tbody > tr:last-child td:last-child {
  border-bottom-right-radius: 8px;
}

.c11 {
  box-sizing: border-box;
  font-size: 12px;
  min-width: 200px;
  outline: none;
  border: none;
  border-radius: 200px;
  height: 32px;
  transition: all .2s;
  background: #0c143d;
  margin-right: 16px;
  padding-left: 16px;
  padding-right: 16px;
  color: rgba(255,255,255,0.87);
}

.c11:hover {
  background: #111B48;
}

.c11:focus,
.c11:active {
  background: #111B48;
  box-shadow: inset 0 2px 4px rgba(0,0,0,.24);
  color: rgba(255,255,255,0.87);
}

.c11::placeholder {
  color: rgba(255,255,255,0.24);
  font-size: 12px;
}

.c15 {
  box-sizing: border-box;
  display: flex;
}

.c15 button {
  background: none;
  border: none;
  border-radius: 200px;
  cursor: pointer;
  padding: 0;
  margin: 0 0 0 8px;
  outline: none;
  transition: all 0.3s;
  text-align: center;
}

.c15 button:hover,
.c15 button:focus {
  background: #1C254D;
}

.c15 button:hover .c8,
.c15 button:focus .c8 {
  opacity: 1;
}

.c15 button .c8 {
  opacity: 0.4;
  font-size: 20px;
  transition: all 0.3s;
}

.c10 {
  padding: 12px 16px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: end;
  background: #222C59;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
  justify-content: space-between;
}

.c18 > tbody > tr > td {
  vertical-align: baseline;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  overflow: auto;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

.c7 {
  line-height: normal;
  background-color: transparent;
  font-weight: normal;
  border: 1px solid rgba(255,255,255,0.24);
  color: #fff;
}

.c7:hover,
.c7:focus {
  background: #2C3A73;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Kubernetes
    </div>
    <a
      class="c3"
      href="https://goteleport.com/docs/kubernetes-access/guides"
      kind="primary"
      rel="noreferrer"
      target="_blank"
      width="240px"
    >
      View documentation
    </a>
  </div>
  <div
    class="c4"
  >
    <div
      class="c5"
      style="position: relative;"
    >
      <button
        class="c6 c7"
        kind="border"
      >
        <span
          class="c8 c9 icon icon-add "
          color="rgba(255,255,255,0.24)"
          font-size="4"
        />
        Add Filters
      </button>
    </div>
  </div>
  <div
    style="min-width: min-content;"
  >
    <nav
      class="c10"
    >
      <input
        class="c11"
        color="text.primary"
        placeholder="SEARCH..."
        value=""
      />
      <div
        class="c12"
      >
        <div
          class="c13"
        >
          <div
            class="c14"
            color="primary.contrastText"
          >
            SHOWING 
            <strong>
              1
            </strong>
             - 
            <strong>
              3
            </strong>
             
            of 
            <strong>
              3
            </strong>
          </div>
        </div>
        <div
          class="c15"
        >
          <button
            disabled=""
            title="Previous Page"
          >
            <span
              class="c8 c16 icon icon-arrow-left-circle "
              color="light"
              font-size="3"
            />
          </button>
          <button
            disabled=""
            title="Next Page"
          >
            <span
              class="c8 c16 icon icon-arrow-right-circle "
              color="light"
              font-size="3"
            />
          </button>
        </div>
      </div>
    </nav>
    <table
      class="c17 c18"
    >
      <thead>
        <tr>
          <th>
            <a>
              Name
              <span
                class="c8 c19 icon icon-chevron-down "
                color="light"
              />
            </a>
          </th>
          <th>
            Labels
          </th>
          <th />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            cookie
          </td>
          <td>
            <div
              class="c20"
              kind="secondary"
              style="cursor: pointer;"
            >
              cluster-name: some-cluster-name
            </div>
            <div
              class="c20"
              kind="secondary"
              style="cursor: pointer;"
            >
              env: idk
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c21"
              kind="border"
            >
              Connect
            </button>
          </td>
        </tr>
        <tr>
          <td>
            tele.logicoma.dev-prod
          </td>
          <td>
            <div
              class="c20"
              kind="secondary"
              style="cursor: pointer;"
            >
              kernal: 4.15.0-51-generic
            </div>
            <div
              class="c20"
              kind="secondary"
              style="cursor: pointer;"
            >
              env: prod
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c21"
              kind="border"
            >
              Connect
            </button>
          </td>
        </tr>
        <tr>
          <td>
            tele.logicoma.dev-staging
          </td>
          <td>
            <div
              class="c20"
              kind="secondary"
              style="cursor: pointer;"
            >
              env: staging
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c21"
              kind="border"
            >
              Connect
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  
</div>
`;

exports[`readonly empty state 1`] = `
.c4 {
  box-sizing: border-box;
  max-width: 600px;
  margin-top: 24px;
  margin-left: auto;
  margin-right: auto;
  padding: 56px;
  color: rgba(255,255,255,0.87);
  background-color: #222C59;
  text-align: center;
  border-radius: 12px;
}

.c3 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 240px;
}

.c3:active {
  opacity: 0.56;
}

.c3:hover,
.c3:focus {
  background: #651FFF;
}

.c3:active {
  background: #354AA4;
}

.c3:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 28px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 16px;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  overflow: auto;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div>
  <div
    class="sc-fzqBZW c0"
  >
    <div
      class="sc-fzqBZW c1"
    >
      <div
        class="c2"
      >
        Kubernetes
      </div>
      <a
        class="c3"
        href="https://goteleport.com/docs/kubernetes-access/guides"
        kind="primary"
        rel="noreferrer"
        target="_blank"
        width="240px"
      >
        View documentation
      </a>
    </div>
    <div
      class="c4"
      color="text.primary"
    >
      <div
        class="c5"
      >
        No Kubernetes Clusters Found
      </div>
      <div
        class="c6"
      >
        There are no kubernetes clusters for the "
        <span
          class="c7"
        >
          im-a-cluster
        </span>
        " cluster.
      </div>
    </div>
  </div>
</div>
`;
